proxy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpcaas-proxy
  namespace: rpcaas
  labels:
    app: rpcaas-proxy
spec:
  type: ClusterIP
  selector:
    app: rpcaas-proxy
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      protocol: TCP
